example/src/main/webapp/WEB-INF/views/error/503.html.ssp
<h3>503 Service Unavailable</h3>
<hr/>

<p>
Sorry.
</p>
